# smollm2-gated-lora

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
scripts/: colab_train_10m.sh  colab_train_medium_41m.sh  eval.sh  observe_before_after.sh  run_beam_demo.sh  train.sh
src/: __init__.py  beam.py  config.py  data.py  eval.py  gated_lora.py  metrics.py  model.py  observe.py  train.py  utils.py
